--- a/navod.html
+++ b/navod.html
@@ -106,7 +106,7 @@
         <h2>Připnutí aplikace / Screen pinning</h2>
         <div class="links">
           <div class="item">
-            <a href="https://youtube.com/shorts/1vJcTzZUJ0A?feature=share" target="_blank" rel="noopener noreferrer">
+            <a href="https://youtube.com/shorts/vhXPcbaVvcE" target="_blank" rel="noopener noreferrer">
               ▶️ Návodné video (YouTube Shorts)
             </a>
             <small>Rychlý postup krok za krokem.</small>
