--- a/navod.html
+++ b/navod.html
@@ -96,54 +96,49 @@
 <body>
   <div class="wrap">
     <header>
-      <h1>Návody pro „kioskový“ režim při testu</h1>
-      <p>Odkazy na postupy: <strong>připnutí aplikace (Android)</strong> a <strong>asistovaný přístup (iOS)</strong>.</p>
-    </header>
+      <h1>Návody pro připnutí aplikace</h1>
+      </header>
 
     <section class="grid">
       <div class="card">
-        <span class="badge">Android</span>
-        <h2>Připnutí aplikace / Screen pinning</h2>
+         <h2>Android</h2>
+         <h2>Připnutí aplikace / Screen pinning</h2>
         <div class="links">
           <div class="item">
             <a href="https://youtube.com/shorts/vhXPcbaVvcE" target="_blank" rel="noopener noreferrer">
               ▶️ Návodné video (YouTube Shorts)
             </a>
-            <small>Rychlý postup krok za krokem.</small>
-          </div>
+                     </div>
           <div class="item">
             <a href="https://www.samsung.com/sg/support/mobile-devices/pin-an-app-to-your-phone-screen-so-that-it-cant-be-closed/"
                target="_blank" rel="noopener noreferrer">
               📄 Webový návod (Samsung)
             </a>
-            <small>Popis nastavení připnutí aplikace v Androidu (Samsung).</small>
-          </div>
+                     </div>
         </div>
       </div>
 
       <div class="card">
-        <span class="badge">iPhone / iPad (iOS)</span>
+      <h2>iPhone - iOS</h2>
         <h2>Asistovaný přístup / Guided Access</h2>
         <div class="links">
           <div class="item">
             <a href="https://www.youtube.com/watch?v=G_O0iq4WwMs" target="_blank" rel="noopener noreferrer">
               ▶️ Návodné video (YouTube)
             </a>
-            <small>Ukázka zapnutí a použití Guided Access.</small>
+          
           </div>
           <div class="item">
             <a href="https://support.apple.com/cs-cz/111795" target="_blank" rel="noopener noreferrer">
               📄 Webový návod (Apple Support – česky)
             </a>
-            <small>Oficiální postup Apple pro Asistovaný přístup.</small>
+          
           </div>
         </div>
       </div>
     </section>
 
-    <footer>
-      Tip: Odkazy se otevírají do nové záložky (aby se stránka s testem náhodou nezavřela).
-    </footer>
+  
   </div>
 </body>
 </html>
